# Phantom-Drive-WT

./: .clang-format  .gitignore  CMakeLists.txt  License.txt  Makefile  README.md  Readme.md  SceneEdit.pro  core.pro  keys.pro
ass/: akari.pro  camera.pro  keys.pro  passthrough.frag.glsl  passthrough.vert.glsl  passthroughTex.vert.glsl  test.dds  textured.frag.glsl  textured.vert.glsl
ass/Actors/: Akari.actr
ass/Controls/: SceneEdit.pro  akari.pro  camera.pro
ass/Models/Akari/: diffuse.dds  model.mdl
ass/Models/TestCube/: material.mtl  specular.dds
ass/Shaders/: textured.frag.glsl  textured.vert.glsl
examples/BasicRendering/: Application.hpp
examples/BasicRendering/ass/Shaders/: textured.frag.glsl
include/asset_management/: ResourceCache.hpp
include/graphics/: Framebuffer.hpp  RenderComponent.hpp
shaders/: standard-pbr.frag.glsl  standard-pbr.vert.glsl
src/: Actor.cpp  Actor.h  Actor.hpp  ActorMotionState.cpp  ActorMotionState.h  ActorMotionState.hpp  Application.cpp  Application.h  Application.hpp  CMakeLists.txt  Camera.cpp  Camera.h  Camera.hpp  DummyActor.cpp  DummyActor.h  DummyActor.hpp  DummyActor2.cpp  DummyActor2.h  EditorScene.cpp  EditorScene.hpp  Framebuffer.cpp  Framebuffer.hpp  Geometry.cpp  Geometry.hpp  InputModel.cpp  InputModel.hpp  Light.cpp  Light.h  Light.hpp  Logger.cpp  Logger.h  Logger.hpp  PSCN.cpp  PSCN.hpp  PhysicsModel.cpp  PhysicsModel.h  PhysicsSimulator.cpp  PhysicsSimulator.h  PhysicsSimulator.hpp  PhysicsSystem.cpp  (+52 more)
src/common/: SpatialComponent.cpp
src/game_logic/: Actor.cpp
src/graphics/: PMDL.cpp  RenderContext.cpp  ShaderPipeline.cpp
